--- a/packages/site/index.html
+++ b/packages/site/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>易导航 - 随易科技</title>
+        <title>易导航</title>
         <meta name="referrer" content="no-referrer-when-downgrade" />
         <link rel="icon" href="/logo.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" />
     </head>
     <body>
         <div id="app"></div>
-        <script type="module" src="/src/dev.js"></script>
+        <script type="module" src="/src/main.js"></script>
     </body>
 </html>
